Fixed broken index links and continued to make main site look like prototype

--- a/css/style.css
+++ b/css/style.css
@@ -21,14 +21,19 @@ a {
     text-align: center;
     align-items: center;
     margin-left: 100px;
-    margin-right: 30%;
+    margin-right: 20%;
+    margin-bottom: 100px;
+    color: #111111;
 }
 .buttons {
     background-color: #ffffff;
-    border-radius: 20px;
-    border: 2px solid #111111;
+    margin-top: 100px;
+    padding: 25px 50px;
+    border-radius: 25px;
+    border: 1px solid #111111;
     font-family: "Roboto", sans-serif;
     font-weight: 300;
+    font-size: 30px;
 }
 .buttons:hover {
     background-color: #F8E9EE;
